--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
     "ios:no-cache": "npx expo run:ios --no-build-cache",
     "web": "expo start --web",
     "dev-client": "expo start --dev-client",
-    "clean": "expo r -c"
+    "clean": "expo r -c",
+    "test": "npx jest",
+    "test:coverage": "npm test -- --coverage"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
+    "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-screens": "~3.22.0",
     "react-native-safe-area-context": "4.6.3",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.2.2",
+    "@types/jest": "^29.5.3",
     "@types/react": "~18.0.14",
+    "jest": "^29.6.2",
     "typescript": "^5.1.3"
   },
   "private": true
