--- a/package.json
+++ b/package.json
@@ -15,21 +15,27 @@
     "test:coverage": "npm test -- --coverage"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.197",
+    "axios": "^1.4.0",
     "expo": "~49.0.7",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-base64": "^0.2.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
@@ -38,6 +44,7 @@
     "@testing-library/react-native": "^12.2.2",
     "@types/jest": "^29.5.3",
     "@types/react": "~18.0.14",
+    "@types/react-native-base64": "^0.2.0",
     "jest": "^29.6.2",
     "typescript": "^5.1.3"
   },
