--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-native-webview": "13.2.2",
     "react-redux": "^8.1.2",
     "expo-linear-gradient": "~12.3.0",
-    "expo-blur": "~12.4.1"
+    "expo-blur": "~12.4.1",
+    "expo-image": "~1.3.2",
+    "expo-asset": "~8.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
