--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.33.0",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.197",
     "axios": "^1.4.0",
     "expo": "~49.0.7",
+    "expo-asset": "~8.10.1",
+    "expo-blur": "~12.4.1",
     "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -38,11 +43,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-webview": "13.2.2",
-    "react-redux": "^8.1.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-blur": "~12.4.1",
-    "expo-image": "~1.3.2",
-    "expo-asset": "~8.10.1"
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
