--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "expo": "~49.0.7",
     "expo-asset": "~8.10.1",
     "expo-blur": "~12.4.1",
+    "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.8",
     "expo-haptics": "~12.4.0",
     "expo-image": "~1.3.2",
     "expo-linear-gradient": "~12.3.0",
