--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-webview": "13.2.2",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
