--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-svg": "13.9.0",
     "react-native-webview": "13.2.2",
     "react-redux": "^8.1.2",
-    "expo-constants": "~14.4.2"
+    "expo-constants": "~14.4.2",
+    "@react-native-community/slider": "4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
